updated telemetry operators
