# golang/api/openapi.yaml
@@ -1068,6 +1068,98 @@ paths:
       - cookieAuth: []
       summary: Save a new temperature measurement
   /v1/telemetry:
+    get:
+      description: "This returns telemetry values for a certain, defineable date range.\
+        \ The request needs to send a token in the header or a cookie. Note that this\
+        \ returns the telemetry data for a scale, the API call for an actual beeHive\
+        \ is different."
+      operationId: telemetryGet
+      parameters:
+      - description: "Either the cookie, registrationId or this Q-Token must be set\
+          \ to be authorized for the API call."
+        example: 8B0FE5CF-C096-4B3E-8748-27906B4A9449
+        explode: false
+        in: header
+        name: Q-Token
+        required: false
+        schema:
+          type: string
+        style: simple
+      - description: "Either this cookie, registrationId or the Q-Token must be set\
+          \ to be authorized for the API call."
+        example: 8B0FE5CF-C096-4B3E-8748-27906B4A9449
+        explode: true
+        in: cookie
+        name: token
+        required: false
+        schema:
+          type: string
+        style: form
+      - description: The Hive UUID - can be used instead of the Mac Adress if you
+          want to query an associated hive. Either this field or the macAddress are
+          required.
+        example: 8B0FE5CF-C096-4B3E-8748-27906B4A9449
+        explode: true
+        in: query
+        name: hiveUuid
+        required: false
+        schema:
+          type: string
+        style: form
+      - description: The Mac Address of the scale. You can omit this if you use query
+          the hiveUuid.
+        example: 829898a53801
+        explode: true
+        in: query
+        name: macAddress
+        required: false
+        schema:
+          type: string
+        style: form
+      - description: The Unix Time (epoch) that defines the end time of the telemetry
+          measurements. The beginning is defined by the secondsInThePast parameter.
+        example: 1639170002
+        explode: true
+        in: query
+        name: epoch
+        required: true
+        schema:
+          format: int64
+          type: integer
+        style: form
+      - description: How many seconds we go to the past to get the data measurements.
+        example: 7200
+        explode: true
+        in: query
+        name: secondsInThePast
+        required: true
+        schema:
+          format: int64
+          type: integer
+        style: form
+      - description: The User ID. This is used internally and will be overwritten
+          if you send it to the api server. Ignore.
+        example: 123
+        explode: true
+        in: query
+        name: userId
+        required: false
+        schema:
+          format: int64
+          type: integer
+        style: form
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/scaleV2Response'
+          description: Successfully returned a list of telemetry measurements
+        "400":
+          description: Client error
+        "500":
+          description: Internal error
+      summary: Get telemetry values
     post:
       description: Sends a weight and other telemetry from a scale to the queensaver
         system. The request needs to send the registrationId along with the request.
