# golang/go/api.go
@@ -42,6 +42,7 @@ type DefaultApiRouter interface {
 	StandsGet(http.ResponseWriter, *http.Request)
 	StandsPost(http.ResponseWriter, *http.Request)
 	StandsPut(http.ResponseWriter, *http.Request)
+	TelemetryGet(http.ResponseWriter, *http.Request)
 	TelemetryPost(http.ResponseWriter, *http.Request)
 	TemperatureGet(http.ResponseWriter, *http.Request)
 	TemperaturePost(http.ResponseWriter, *http.Request)
@@ -80,6 +81,7 @@ type DefaultApiServicer interface {
 	StandsGet(context.Context, string, int64, int64, string, string, int64) (ImplResponse, error)
 	StandsPost(context.Context, string, string, int64, Stand) (ImplResponse, error)
 	StandsPut(context.Context, string, string, int64, Stand) (ImplResponse, error)
+	TelemetryGet(context.Context, int64, int64, string, string, string, string, int64) (ImplResponse, error)
 	TelemetryPost(context.Context, string, int64, TelemetryValues) (ImplResponse, error)
 	TemperatureGet(context.Context, string, string, int64, int64, string, int64) (ImplResponse, error)
 	TemperaturePost(context.Context, int64, Temperature) (ImplResponse, error)
